# DP-Week1-5223600041-Muhammad-Sultan-Fajar-Saepudin

./: .gitignore  CMakeLists.txt  README.md
Task 1/: BasicRewardRule.h  BonusRewardRule.cpp  CMakeLists.txt  FixedInputGenerator.cpp  README.md  RandomInputGenerator.cpp  RunSession.cpp  ShopSystem.h  TurnInput.h  main.cpp
Task 2/: BasicRewardRule.cpp  BasicScoringRule.cpp  BasicScoringRule.h  BonusRewardRule.h  CMakeLists.txt  FixedInputGenerator.h  IInputGenerator.h  IRewardRule.h  IScoringRule.h  README.md  RandomInputGenerator.h  RunSession.cpp  RunSession.h  ShopSystem.cpp  main.cpp
